--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
 body{
-    background-color: antiquewhite;
+    background-color:rgb(20, 20, 20);
+    color: aliceblue;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+}
+header{
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+    min-width: 95vw;
+    margin: 10px;
 }
