--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ body{
     justify-content: center;
     align-items: center;
 }
+#logo{
+    height: 300px;
+    align-self: center;
+}
 header{
     display: flex;
     flex-flow: row nowrap;
@@ -14,4 +18,27 @@ header{
     align-items: center;
     min-width: 95vw;
     margin: 10px;
+}
+article{
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
+    align-items:stretch;
+    min-width: 95vw;
+    margin: 10px;
+    font-size:xx-large;
+}
+footer{
+    background-color: gray;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+    min-width: 100vw;
+    min-height: 32px;
+    max-height: 64px;
+    height: 2vh;
 }
