--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body{
     align-items: center;
 }
 #logo{
-    height: 300px;
+    height: 400px;
     align-self: center;
 }
 header{
@@ -26,7 +26,7 @@ article{
     align-items:stretch;
     min-width: 95vw;
     margin: 10px;
-    font-size:xx-large;
+    font-size: x-large;
 }
 footer{
     background-color: gray;
